# YumeDock

./: .gitignore  Cargo.toml  PRODUCT.md  README.md  build-release.ps1  build.rs  install.ps1
.github/workflows/: release.yml
assets/: make_icon.py  yumedock.rc
docs/superpowers/plans/: 2026-07-15-phase1-stability-and-popover-infra.md  2026-07-16-phase2-launcher-and-quick-popovers.md
docs/superpowers/specs/: 2026-07-15-stability-and-topbar-rework-design.md
installer/: yumedock.iss
src/: app.rs  config.rs  deviceloss.rs  log.rs  main.rs  model.rs  render.rs  shell.rs  status.rs  tracker.rs
