[package]
name = "yumedock"
version = "0.1.0"
edition = "2024"
description = "Lightweight macOS-style dock and menu bar for Windows 11"

[[bin]]
name = "YumeDock"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.100"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_Graphics_Direct2D",
    "Win32_Graphics_Direct2D_Common",
    "Win32_Graphics_DirectWrite",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Imaging",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Media_Audio",
    "Win32_Media_Audio_Endpoints",
    "Win32_Networking_WinInet",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_LibraryLoader",
    "Win32_System_Power",
    "Win32_Security",
    "Win32_System_SystemInformation",
    "Win32_System_Threading",
    "Win32_System_Variant",
    "Win32_Storage_FileSystem",
    "Win32_Storage_EnhancedStorage",
    "Win32_UI_Accessibility",
    "Win32_UI_Controls",
    "Win32_UI_HiDpi",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
    "Win32_UI_Shell_PropertiesSystem",
    "Win32_UI_WindowsAndMessaging",
] }

[profile.release]
opt-level = "s"
lto = "thin"
codegen-units = 1
panic = "abort"
strip = "symbols"
